# BiasCheck

./: README.md
src/frontend/: index.html  package.json
src/frontend/src/: App.vue
src/server/: Cargo.toml
src/server/src/: main.rs
src/server/src/db/: sea.rs
src/server/src/domain/: env.rs
