[package]
name = "server"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
sea-orm = { version = "1.1.19", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.48.0", features = ["full"] }

migration = { path = "migration" }
serde = { version = "1.0.228", features = ["derive"] }
dotenvy = "0.15.7"
config = "0.15.19"
once_cell = "1.21.3"
